--- a/app/src/main/res/layout/layout_statistic_chart.xml
+++ b/app/src/main/res/layout/layout_statistic_chart.xml
@@ -20,11 +20,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/title"
-        android:layout_toStartOf="@id/slash"
-        android:text="Words"
         android:layout_marginStart="30dp"
-        android:textColor="@color/colorAccent"
+        android:layout_toStartOf="@id/slash"
         android:background="@null"
+        tools:text="Words"
+        android:textColor="@color/colorAccent"
         android:textSize="@dimen/card_view_button_text_size" />
 
     <TextView
@@ -33,9 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/title"
         android:layout_toStartOf="@id/xAxis"
-        android:text="/"
+        tools:text="/"
         android:textColor="@android:color/white"
-        android:textSize="19dp" />
+        android:textSize="19sp" />
 
     <Spinner
         android:id="@+id/xAxis"
@@ -43,26 +43,17 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/title"
         android:layout_alignParentEnd="true"
-        android:text="Day"
-        android:textColor="@color/colorAccent"
-        android:textSize="@dimen/card_view_button_text_size"
+        android:layout_marginEnd="12dp"
         android:layout_marginStart="5dp"
-        android:background="@null"
-        android:layout_marginEnd="12dp"/>
+        tools:text="Day"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/card_view_button_text_size" />
 
 
-    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/statisticChat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:layout_margin="15dp"
-        app:contentPadding="5dp"
-        app:elevation="0dp">
-
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/statisticChat"
-            android:layout_width="match_parent"
-            android:layout_height="200dp" />
-    </android.support.v7.widget.CardView>
+        android:layout_height="200dp"
+        android:layout_below="@id/title" />
 </RelativeLayout>
 
