--- a/app/src/main/res/layout/layout_statistic_chart.xml
+++ b/app/src/main/res/layout/layout_statistic_chart.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/title"
         android:layout_toStartOf="@id/xAxis"
-        tools:text="/"
+        android:text="@string/slash"
         android:textColor="@android:color/white"
         android:textSize="19sp" />
 
@@ -45,6 +45,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="5dp"
+        android:background="@null"
         tools:text="Day"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/card_view_button_text_size" />
