--- a/app/src/main/res/values/constents.xml
+++ b/app/src/main/res/values/constents.xml
@@ -4,5 +4,6 @@
     <string name="playStoreHttpsURL" translatable="false">https://play.google.com/store/apps/details?id=%1$s</string>
     <string name="feedbackURL" formatted="false" translatable="false">mailto:jinguol999@163.com?subject=Feedback%20about%20Diary%20Book</string>
     <string name="translateURL" translatable="false">https://crowdin.com/project/diary-book</string>
+    <string name="slash" translatable="false">/</string>
 
 </resources>
