--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="transparent">#fa0048cd</color>
     <color name="black">#353535</color>
     <color name="colorEditHighlight">#66000000</color>
-    <drawable name="touchFeedback">@color/colorPrimaryLighter</drawable>
+    <drawable name="touchFeedback">#d7d3a0</drawable>
     <drawable name="item_normal">@color/paper_yellow</drawable>
 </resources>
