--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -17,19 +17,22 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
-    android:layout_height="250dp"
-    android:gravity="bottom"
-    android:orientation="vertical"
-    android:background="@drawable/ic_drawer_top_bg"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:layout_height="wrap_content">
+
+    <com.empty.jinux.simplediary.ui.main.MImageView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/ic_simple_diary_google_play_top_banner"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:textSize="25dp"
+        android:textSize="15sp"
+        android:textColor="@android:color/white"
         android:text="@string/navigation_view_header_title"
-        android:layout_margin="16dp"
+        android:layout_margin="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </FrameLayout>
