--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -22,7 +22,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/toolArea"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/editor_tool_area_init_height"
         android:layout_gravity="bottom"
         android:background="@null"
         android:visibility="gone" />
