--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,5 +34,6 @@
     <dimen name="diaries_list_recycle_view_margin_horizontal">10dp</dimen>
     <dimen name="radio_group_selected_circle_size">35dp</dimen>
     <dimen name="statusbar_height">26dp</dimen>
+    <dimen name="editor_tool_area_init_height">300dp</dimen>
 
 </resources>
