--- a/app/src/main/res/values/constents.xml
+++ b/app/src/main/res/values/constents.xml
@@ -6,5 +6,6 @@
     <string name="translateURL" translatable="false">https://crowdin.com/project/diary-book</string>
     <string name="slash" translatable="false">/</string>
     <string name="app_version_fmt" translatable="false">v%1$s</string>
+    <string name="pref_lock_enable" translatable="false">pref_app_lock_enable</string>
 
 </resources>
