--- a/app/src/main/res/layout/fragment_taskdetail.xml
+++ b/app/src/main/res/layout/fragment_taskdetail.xml
@@ -15,6 +15,7 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
@@ -63,5 +64,11 @@
     <include
         layout="@layout/layout_diary_detail_edit_tool"
         android:visibility="visible" />
+
+    <com.empty.jinux.simplediary.ui.diarydetail.fragment.GoodView
+        android:id="@+id/goodView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
 </FrameLayout>
