--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,5 @@
     <dimen name="editor_tool_area_init_height">300dp</dimen>
     <dimen name="detail_diary_editor_bottom">15dp</dimen>
     <dimen name="about_page_slogin_padding_top">10dp</dimen>
+    <dimen name="good_view_check_size">40dp</dimen>
 </resources>
