--- a/app/src/main/res/layout/layout_punchcard.xml
+++ b/app/src/main/res/layout/layout_punchcard.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
@@ -39,9 +39,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            tools:text="18"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="18" />
 
         <TextView
             android:id="@+id/longestPunch"
@@ -49,9 +49,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:layout_marginStart="15dp"
-            tools:text="18"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="18" />
 
     </LinearLayout>
 
